# ddd-physical-units

./: .gitignore  AGENTS.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: python-package.yml
pytests/: pytest__all.py  pytest__success.py
pytests/fixtures/: __init__.py  import_all_python_modules.py
pytests/unit/physical_units/: pytest__all.py  pytest__base_physical_unit.py  pytest__formula.py  pytest__type_hints.py  pytest__unit.py
requirements/: development.txt  production.txt
src/physical_units/: __init__.py  base_physical_unit.py  exceptions.py  formula.py  type_hints.py  unit.py  unit2.py
